💄 [collapse] fix sub collapse arrow style overwrite issue

--- a/headless/components/base/collapse/collapse.css
+++ b/headless/components/base/collapse/collapse.css
@@ -1,7 +1,7 @@
 @import '@shuimo-design/ui-core/components/base/collapse/collapse.css';
 
 .m-collapse-arrow-expanded {
-    .m-collapse-arrow{
-      transform: rotate(-90deg);
-    }
+  &>.m-collapse-header>.m-collapse-arrow {
+    transform: rotate(-90deg);
   }
+}
